# rigr

./: .gitignore  README.md  blog.html  index.html  pyproject.toml
.github/workflows/: pypi.yml
Eli/: blog_post.md  leads.json
rigr/: __init__.py  cli.py  eval_runner.py  freeze.py  reporter.py
rigr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
site/: index.html
test/: test_eval.py
